--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sociologists Timeline </title>
+    <title>Sociologists Timeline</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
 <body>
-    <div id="timeline"></div>
-    <script src="script.js"></script>
+    <header>
+        <h1>Explore Sociology</h1>
+        <nav>
+            <ul>
+                <li><a href="#sociology">Sociology</a>
+                    <ul>
+                        <li><a href="sociologists.html">Significant Sociologists</a></li>
+                    </ul>
+                </li>
+                <li><a href="#education">Education</a>
+                    <ul>
+                        <li><a href="#future">The Future of Education</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="sociology">
+        <h2>Sociology</h2>
+        <p>Discover the pioneers of sociology and their contributions to understanding society.</p>
+    </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <p>Explore how education systems are evolving and what the future might hold.</p>
+    </section>
+
+    <footer>
+        <p>Copyright © 2024 by Explore Sociology</p>
+    </footer>
 </body>
 </html>
