--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Explore Sociology</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Auth0 SDK lisätty -->
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -26,6 +25,7 @@
                 </li>
             </ul>
         </nav>
+        <button id="logout">Logout</button> <!-- Logout button -->
     </header>
 
     <section id="sociology">
@@ -44,31 +44,32 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
-        const auth0 = await createAuth0Client({
-            domain: 'dev-ceflg.eu.auth0.com',
-            client_id: 'OQmh2Tt36nz75RCfMCpmRHIq9KZ1gTt0',
-            redirect_uri: window.location.origin
-        });
+            const auth0 = await createAuth0Client({
+                domain: 'dev-ceflg.eu.auth0.com',
+                client_id: 'OQmh2Tt36nz75RCfMCpmRHIq9KZ1gTt0',
+                redirect_uri: window.location.origin
+            });
 
-        // Tarkista, sisältääkö URL autentikointikoodin
-        if (window.location.search.includes('code=')) {
-            // Käsittele redirect callback ja puhdista URL
-            await auth0.handleRedirectCallback();
-            window.history.replaceState({}, document.title, window.location.pathname);
-        }
+            if (window.location.search.includes('code=')) {
+                await auth0.handleRedirectCallback();
+                window.history.replaceState({}, document.title, window.location.pathname);
+            }
 
-        // Tarkista onko käyttäjä autentikoitu
-        const isAuthenticated = await auth0.isAuthenticated();
-        if (isAuthenticated) {
-            // Näytä käyttäjän profiili
-            const user = await auth0.getUser();
-            console.log(user);
-            // Jatka sovelluksen normaalia logiikkaa
-        } else {
-                // Ei autentikoitu, käynnistä kirjautuminen
+            const isAuthenticated = await auth0.isAuthenticated();
+            if (isAuthenticated) {
+                const user = await auth0.getUser();
+                console.log(user);
+            } else {
                 await auth0.loginWithRedirect();
             }
+
+            document.getElementById('logout').addEventListener('click', () => {
+                auth0.logout({
+                    returnTo: window.location.origin
+                });
+            });
         });
     </script>
 </body>
 </html>
+
